# Polkadot

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  bash.sh  chain_spec_1000.json  chain_spec_1001.json  finalBash.sh  main.rs  make.bat  package-lock.json  package.json  xcm-demo.toml  zombienet-config.toml
backend/: README.md  XCM_API_README.md  package-lock.json  package.json  server.js  setup.ps1  setup.sh
backend/polkaflow-telegram-bot/: index.js
backend/polkavm-compiler/: Contract.abi  Contract.sol  HACKATHON_DEMO_GUIDE.md  XCM_API_DOCUMENTATION.md  database.js  manual-test-commands.md  package-lock.json  package.json  server.js  telegram-config.js  utils.js
backend/polkavm-compiler/controllers/: rustHandler.js
backend/polkavm-compiler/models/: FlowChart.js
backend/routes/: telegram.js  xcm.js
backend/solidity/: AssetHubManager.sol  AssetStorage.sol  TelegramContract.sol  assetHub.sol  dao.sol  xcmMock.sol
backend/utils/: xcm-utils.js
frontend/: MODEL_UPDATE_SUMMARY.md  SIMPLIFIED_IMPLEMENTATION.md  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-1/: README.md
frontend/src/: App.jsx  MockXCMTrigger.jsx  index.css
frontend/src/components/: ContractDashboard.jsx  ContractTestingHelper.jsx  DynamicContractTester.jsx  LoadingAnimation.jsx  README.md  TestingGuide.jsx  WorkflowManager.jsx  app-sidebar.jsx  nav-documents.jsx  nav-main.jsx  nav-user.jsx  site-header.jsx
frontend/src/config/: apiConfig.js
frontend/src/contracts/: XcmAssetReceiver.json
frontend/src/data/: nodeTypes.js
(+84 files in other folders)
